# dezly-saga

./: .gitignore  README.md  time_management.md
01-research/: current_research.md
ethical-hacking/: progress_tracker.md  theory_notes.md
mariadb-databases/: pyproject.toml
old-dojo/: .gitignore  README.md
personal-training/: time_management.md
python-programming/: 00_python_ecosystem_and_toolchain.md  00_the_python_toolchain.md
software-engineering/postgresql/af-mastering-postgres/: .envrc  00_progress_tracker.md  Makefile  README.md  pgcli_config  pyproject.toml
software-engineering/postgresql/af-mastering-postgres/json-examples/: tsunade_senju.json
software-engineering/postgresql/af-mastering-postgres/module-01-introduction/: 01_introduction_to_the_course.md  02_overview_of_the_course_structure.md
software-engineering/postgresql/af-mastering-postgres/study-notes/: 00_progress_tracker.md
software-engineering/postgresql/af-mastering-postgres/study-notes/module-01-introduction/: 02_overview_of_the_course_structure.md  04_psql_cli.md
software-engineering/postgresql/af-mastering-postgres/study-notes/module-02-data-types/: 05_introduction_to_schema.md  06_integers.md  07_numerics.md  08_floating_points.md  09_storing_money.md  11_casting_types.md  12_character_types.md  13_check_constraints.md  18_boolean.md  19_enums.md
software-engineering/postgresql/af-mastering-postgres/study-notes/module-03-advanced-data-types/: 28_json.md
software-engineering/postgresql/af-mastering-postgres/study-notes/module-10-advanced-json/: 101_json_extraction.md
(+501 files in other folders)
