[project]
name = "af-mastering-postgres"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # A command line tool with autocompletion and syntax highlighting
    # Used to interact with your database from the command line
    "pgcli>=4.1.0",
    # The official graphical user interface fo PostgreSQL
    # An secondary way to interact with your database.
    "pgadmin4>=6.21",
]
